@@ -1,3 +1,8 @@
+2003-06-03  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk-doc.spec.in: Add a missing Provides: and include the .pc file.  
+	(#106568, Joe Pranevich)
+
 2003-05-27  Matthias Clasen  <maclas@gmx.de>
 
 	* gtkdoc-mkdb.in (GetSignals): 
